--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body,
         html {
-            background-color: #808080;
+            background-image: url('/mochiPortfolio/');
             margin: 0;
             padding: 0;
             height: 100%;
