--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body,
         html {
-            background-image: url('/mochiPortfolio/');
+            background-image: url('/mochiPortfolio/grayscalecityscape.jpg');
             margin: 0;
             padding: 0;
             height: 100%;
